[gd_scene load_steps=18 format=3 uid="uid://trxctaaesrgo"]

[ext_resource type="Script" path="res://scripts/character_scripts/npc/snekkers.gd" id="1_djawe"]
[ext_resource type="Texture2D" uid="uid://dlgfywqxxxqsm" path="res://assets/floor_1/npc/snekkers/Snekkers-Healed-Idle.png" id="2_x2knj"]
[ext_resource type="Resource" uid="uid://bo6dh3eso0qgw" path="res://dialogue/floor_1/snekkers.dialogue" id="3_5hdfo"]
[ext_resource type="Texture2D" uid="uid://qral3ctdrux8" path="res://assets/floor_1/npc/snekkers/Mushroomed-Snekkers-Idle.png" id="3_okgp8"]
[ext_resource type="PackedScene" uid="uid://nw64sg18ajk6" path="res://helpers/auto_actionable.tscn" id="5_yf50a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5rf2n"]
atlas = ExtResource("3_okgp8")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e6uj"]
atlas = ExtResource("3_okgp8")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0v4e"]
atlas = ExtResource("3_okgp8")
region = Rect2(0, 2048, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4ve5"]
atlas = ExtResource("3_okgp8")
region = Rect2(0, 3072, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_iifh7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rf2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e6uj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0v4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4ve5")
}],
"loop": true,
"name": &"snekkers_mushroom_idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mfus6"]
atlas = ExtResource("2_x2knj")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwibf"]
atlas = ExtResource("2_x2knj")
region = Rect2(1024, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqixj"]
atlas = ExtResource("2_x2knj")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_87g4p"]
atlas = ExtResource("2_x2knj")
region = Rect2(1024, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyqkq"]
atlas = ExtResource("2_x2knj")
region = Rect2(0, 2048, 1024, 1024)

[sub_resource type="SpriteFrames" id="SpriteFrames_t5p1b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfus6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwibf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqixj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87g4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyqkq")
}],
"loop": true,
"name": &"snekkers_healed_idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v184n"]
radius = 59.1354

[node name="Snekkers" type="CharacterBody2D"]
script = ExtResource("1_djawe")

[node name="SnekkersMushroomed" type="AnimatedSprite2D" parent="."]
position = Vector2(0.500002, 19)
scale = Vector2(0.0869141, 0.0878906)
sprite_frames = SubResource("SpriteFrames_iifh7")
animation = &"snekkers_mushroom_idle"
autoplay = "snekkers_mushroom_idle"
frame = 2
frame_progress = 0.831316

[node name="SnekkersHealed" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0.5, 19)
scale = Vector2(0.0849609, 0.0878906)
sprite_frames = SubResource("SpriteFrames_t5p1b")
animation = &"snekkers_healed_idle"
autoplay = "snekkers_healed_idle"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(1.08254, 19.1106)
scale = Vector2(2.80162, 2.80162)
polygon = PackedVector2Array(-10.1333, -10.6667, -10.1333, -4.8, -8.53333, -2.13333, -8.53333, 2.66667, -9.06667, 6.4, -11.2, 8.53333, -11.2, 12.8, -9.06667, 14.9333, 9.6, 14.9333, 11.7333, 13.8667, 13.3333, 11.7333, 13.3333, 9.6, 13.8667, 9.6, 13.8667, 6.93333, 13.3333, 5.33333, 11.2, 1.06667, 11.7333, -1.6, 11.7333, -6.4, 10.1333, -10.1333, 4.8, -13.8667, -5.33333, -13.8667)

[node name="AutoActionable" parent="." instance=ExtResource("5_yf50a")]
dialogue_resource = ExtResource("3_5hdfo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoActionable"]
position = Vector2(2, 23)
shape = SubResource("CircleShape2D_v184n")
debug_color = Color(0.580392, 0.52549, 0.458824, 0.282353)
